# OpenAPI.yml
@@ -137,6 +137,11 @@ components:
           example: 1
           minimum: 0
 
+        productID:
+          type: integer
+          example: 1
+          minimum: 0
+
         supplierID:
           type: integer
           example: 1
